--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.51.13",
   "private": true,
+  "packageManager": "pnpm@8.6.0",
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
@@ -20,6 +21,7 @@
     "@iconify-json/vscode-icons": "^1.1.25",
     "eslint": "^8.41.0",
     "ofetch": "^1.0.1",
+    "pnpm": "8.6.0",
     "unocss": "^0.52.7",
     "vite": "^4.3.9",
     "vitepress": "1.0.0-beta.1"
