--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "unocss-docs-cn",
   "type": "module",
-  "version": "0.51.13",
+  "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.6.0",
+  "packageManager": "pnpm@8.10.5",
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
@@ -12,18 +12,17 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.4",
-    "@iconify-json/carbon": "^1.1.17",
-    "@iconify-json/logos": "^1.1.31",
-    "@iconify-json/mdi": "^1.1.52",
-    "@iconify-json/ph": "^1.1.5",
-    "@iconify-json/twemoji": "^1.1.11",
-    "@iconify-json/vscode-icons": "^1.1.25",
-    "eslint": "^8.41.0",
-    "ofetch": "^1.0.1",
-    "pnpm": "8.6.0",
-    "unocss": "^0.52.7",
-    "vite": "^4.3.9",
-    "vitepress": "1.0.0-beta.1"
+    "@antfu/eslint-config": "2.0.0",
+    "eslint": "^8.54.0",
+    "pnpm": "8.10.5",
+    "vitepress": "^1.0.0-rc.29"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "search-insights"
+      ]
+    }
   }
 }
